--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  width: 90%;
+  margin: 0 auto;
+  background: lightsteelblue;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.all__news{
+  margin: 50px auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  margin-top: 25px;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.news{
+  max-width: 500px;
+  padding: 30px;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.news__title{
+  padding-bottom: 10px;
+  border-bottom: 1px solid lightgrey;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading{
+  /* margin-top: 30px; */
+}
+
+.news__description{
+  padding-top: 10px;
+  line-height: 25px;
+  font-size: 14x;
+  padding-bottom: 10px;
+}
+
+.news__published{
+  margin-right: 10px;
+}
+
+.news__published{
+  color: grey;
+}
+
+.news__source{
+  color: blue;
 }
