--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
 body{
   width: 90%;
   margin: 0 auto;
-  background: lightsteelblue;
+  background: #fff;
   
 }
 
-.all__news{
+.all__articles{
   margin: 50px auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -20,38 +20,28 @@ body{
   
 }
 
-.news{
-  max-width: 500px;
+.article{
+  max-width: 400px;  
   padding: 30px;
   border: 1px solid lightgrey;
   border-radius: 5px;
   
 }
 
-.news__title{
+.article__title{
   padding-bottom: 10px;
   border-bottom: 1px solid lightgrey;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.heading{
-  /* margin-top: 30px; */
-}
-
-.news__description{
+.article__description{
   padding-top: 10px;
   line-height: 25px;
-  font-size: 14x;
+  font-size: 15px;
+  font-weight: 400;
   padding-bottom: 10px;
 }
-
-.news__published{
-  margin-right: 10px;
+.article_image{
+  margin-top: 15px;
 }
 
-.news__published{
-  color: grey;
-}
-
-.news__source{
-  color: blue;
-}
